# bumperbot_ws

./: bumperbot_architecture.md
src/bumperbot_bringup/launch/: simulated_robot.launch.py
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: twist_relay.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/bumperbot_controller/launch/: joystick_teleop.launch.py
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/bumperbot_firmware/bumperbot_firmware/: mpu6050_driver.py
src/bumperbot_firmware/launch/: hardware_interface.launch.py
src/bumperbot_firmware_tutorial/: CMakeLists.txt  bumperbot_interface.xml  package.xml
src/bumperbot_firmware_tutorial/bumperbot_firmware_tutorial/: simple_serial_receiver.py  simple_serial_transmitter.py
src/bumperbot_firmware_tutorial/bumperbot_firmware_tutorial/simple_serial_transmitter/: simple_serial_transmitter.ino
src/bumperbot_firmware_tutorial/firmware/simple_encoder_reader/: simple_encoder_reader.ino
src/bumperbot_firmware_tutorial/firmware/simple_motor_controller/: simple_motor_controller.ino
src/bumperbot_firmware_tutorial/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/bumperbot_firmware_tutorial/include/bumperbot_firmware_tutorial/: bumperbot_interface.hpp
src/bumperbot_firmware_tutorial/src/: bumperbot_interface.cpp
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/bumperbot_localization/: odometry_motion_model.py
src/bumperbot_localization/launch/: global_localization.launch.py
src/bumperbot_localization/rviz/: odometry_motion_model.rviz
src/bumperbot_mapping/: CMakeLists.txt  package.xml
src/bumperbot_mapping/bumperbot_mapping/: mapping_with_known_poses.py
src/bumperbot_msgs/: CMakeLists.txt  package.xml
src/bumperbot_msgs/action/: Fibonacci.action
src/bumperbot_py_examples/: package.xml  setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_action_client.py  simple_action_server.py  simple_qos_publisher.py  simple_qos_subscriber.py
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/bumperbot_utils/bumperbot_utils/: safety_stop.py
